--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule ".vimrcUSERPROFILE.vimrc/dotfiles/.vim/bundle/vundle"]
-	path = .vimrcUSERPROFILE.vimrc/dotfiles/.vim/bundle/vundle
-	url = http://github.com/gmarik/vundle.git
+[submodule "./vim/neobunle.vim"]
+	path = ./vim/neobunle.vim
+	url = git://github.com/Shougo/neobundle.vim
