--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "./vim/neobunle.vim"]
-	path = ./vim/neobunle.vim
-	url = git://github.com/Shougo/neobundle.vim
+[submodule "vim/neobundle.vim"]
+	path = vim/neobundle.vim
+	url = git@github.com:Shougo/neobundle.vim.git
