--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "vim/neobundle.vim"]
 	path = vim/neobundle.vim
-	url = git@github.com:Shougo/neobundle.vim.git
+	url = https://github.com/Shougo/neobundle.vim.git
