--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,7 @@
 set-option -g prefix C-t
+set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "xterm"
+
 bind o send-prefix
 
 bind r source-file ~/.tmux.conf; display-message "Reload Config!!"
