tmux.confを最低限の設定に変更

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,10 +1,5 @@
 set-option -g prefix C-t
+set-window-option -g utf8 on
+set-window-option -g mode-keys vi
 set-option -g default-terminal "screen-256color"
 
-bind o send-prefix
-
-bind r source-file ~/.tmux.conf; display-message "Reload Config!!"
-
-bind / list-keys -t vi-copy
-
-set-window-option -g mode-keys vi
