--- a/tmux.conf
+++ b/tmux.conf
@@ -2,4 +2,5 @@ set-option -g prefix C-t
 set-window-option -g utf8 on
 set-window-option -g mode-keys vi
 set-option -g default-terminal "screen-256color"
+set-option -g default-shell /bin/zsh
 
