--- a/tmux.conf
+++ b/tmux.conf
@@ -3,4 +3,5 @@ set-window-option -g utf8 on
 set-window-option -g mode-keys vi
 set-option -g default-terminal "screen-256color"
 set-option -g default-shell /bin/zsh
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 
