--- a/tmux.conf
+++ b/tmux.conf
@@ -5,3 +5,11 @@ set-option -g default-terminal "screen-256color"
 set-option -g default-shell /bin/zsh
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 
+# Base
+set -g status-bg black
+set -g status-fg white
+set -g status-interval 60
+set -g status-left-length 30
+set -g status-left '#[fg=green](#S) #(whoami)@#H#[default]'
+set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=blue]%H:%M#[default]'
+ 
