--- a/tmux.conf
+++ b/tmux.conf
@@ -3,7 +3,7 @@ set-window-option -g utf8 on
 set-window-option -g mode-keys vi
 set-option -g default-terminal "screen-256color"
 set-option -g default-shell /bin/zsh
-#set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # Base
 set -g status-bg black
