--- a/tmux.conf
+++ b/tmux.conf
@@ -12,4 +12,6 @@ set -g status-interval 60
 set -g status-left-length 30
 set -g status-left '#[fg=green](#S) #(whoami)@#H#[default]'
 set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=blue]%H:%M#[default]'
- 
+
+bind | split-window -h
+bind - split-window -v
