--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,4 @@
-set-option -g prefix C-t
+set-option -g prefix C-b
 set-window-option -g mode-keys vi
 set-option -g default-terminal "screen-256color"
 
