--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -1,12 +1,12 @@
 {
   "languageserver": {
-    "perlnavigator": {
-      "command": "node",
-      "filetypes": [ "perl" ],
+    "perlnavigator" : {
+      "command" : "node",
       "args": [
-        "/Users/kfly8/.asdf/installs/nodejs/16.18.0/.npm/lib/node_modules/perlnavigator-server/out/server.js",
+        "/Users/kfly8/src/github.com/bscan/PerlNavigator/server/out/server.js",
         "--stdio"
-      ]
+      ],
+      "filetypes": [ "perl" ]
     }
   }
 }
