--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -7,6 +7,11 @@
         "--stdio"
       ],
       "filetypes": [ "perl" ]
+    },
+    "efm": {
+      "command": "efm-langserver",
+      "args": [],
+      "filetypes": ["markdown", "graphql"]
     }
   }
 }
